Changes from Ant 1.7.x TO current SVN version
=============================================

Changes that could break older environments:
-------------------------------------------

* Improved handling of InterruptException (lets suppose someone/thing is
  trying to kill the thread when we receive an InterruptException),
  when an InterruptException is received, we do not wait anymore in a while
  loop till the end time has been reached. Bugzilla report 42924.

* Refactor PropertyHelper and introspection APIs to make extension more
  granular and support setting task/type attribute values to objects
  decoded by custom PropertyEvaluator delegates. Also add <propertyhelper>
  task for registering delegates and/or replacing the registered PropertyHelper
  instance.  Bugzilla report 42736.

* Added a restricted form of typedef called <componentdef>. This allows
  definition of elements that can only be within tasks or types. This
  method is now used to define conditions, selectors and selectors. This
  means that tasks may now have nested conditions just by implementing
  the Condition interface, rather than extending ConditionBase. It also
  means that the use of namespaces for some of the selectors introduced
  in Ant 1.7.0 is no longer necessary.
  Implementing this means that the DynamicElement work-around introduced
  in Ant 1.7.0 has been removed.
  Bugzilla report 40511.

* In the <touch> task when a <mapper> is used, the millis and datetime
  attributes now override the time of the source resource if provisioned. 
  Bugzilla report 43235.

* Remove fall-back mechanism for references that are not resolved
  during normal runtime execution.

* FileUtils.createTempFile now actually creates the file.
  The TempFile task still does not create the file by default, can be instructed
  to do so however using a new parameter.
  Bugzilla report 33969.
  
* A lock in Project ensured that a BuildListener's messageLogged