@@ -205,7 +205,7 @@ that is not namespace-aware. In particular, avoid the Crimson parser.</p>
 
 <p>
 For the current version of Ant, you will also need a JDK installed on
-your system, version 1.3 or later required, 1.5 or later strongly recommended.
+your system, version 1.4 or later required, 1.5 or later strongly recommended.
 The later the version of Java , the more Ant tasks you get.
 </p>
 <p>
@@ -213,7 +213,7 @@ The later the version of Java , the more Ant tasks you get.
 </p>
 <p>
   <strong>Note: </strong>
-  Ant 1.7.* works with jdk1.3 and higher, Ant 1.6.* works with jdk 1.2 and higher,
+  Ant 1.8.* works with jdk1.4 and higher, Ant 1.7.* works with jdk1.3 and higher, Ant 1.6.* works with jdk 1.2 and higher,
   Ant 1.2 to Ant 1.5.* work with jdk 1.1 and higher.
 </p>
 
